MDEV-18480 Fixed assertion

The view state ID seqnos are monotonically increasing only
in Galera 4 and later. Galera 3 may still produce different
views with same seqno, which would cause assertion during
rolling upgrade.